--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {    
+  "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/renanvamo/raro-labs#readme",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.2"
   },
   "devDependencies": {
