--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.js",
+    "start": "node .",
+    "dev": "nodemon src/api/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
