--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/renanvamo/raro-labs#readme",
   "dependencies": {
     "dotenv": "^16.0.0",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "joi": "^17.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
